Adding missing dependencies and changing jdk version to 17.

--- a/jatyc-lib/build.gradle
+++ b/jatyc-lib/build.gradle
@@ -3,6 +3,7 @@ plugins {
 }
 
 task copySources(type: Copy) {
+  dependsOn ':generateGrammarSource'
     includeEmptyDirs = false
     doFirst {
         // Delete the directory in case a previously copied file should no longer be present
