--- a/build.gradle
+++ b/build.gradle
@@ -22,19 +22,20 @@ configurations {
 }
 
 java {
-  sourceCompatibility = JavaVersion.VERSION_21
-  targetCompatibility = JavaVersion.VERSION_21
+  sourceCompatibility = JavaVersion.VERSION_17
+  targetCompatibility = JavaVersion.VERSION_17
 }
 
 compileKotlin {
   kotlinOptions {
-    jvmTarget = "21"
+    jvmTarget = "17"
   }
 }
 
 compileTestKotlin {
+  dependsOn ':generateTestGrammarSource'
   kotlinOptions {
-    jvmTarget = "21"
+    jvmTarget = "17"
   }
 }
 
