Including KeY as dependency.

--- a/build.gradle
+++ b/build.gradle
@@ -42,7 +42,7 @@ compileTestKotlin {
 ext {
   versions = [
     kotlin                : "1.7.21",
-    antlr4                : "4.11.1",
+    antlr4                : "4.13.2",
     checkerFramework      : "3.28.0",
     errorproneJavacVersion: "9+181-r4173-1",
     junit                 : "4.13.2",
@@ -94,6 +94,11 @@ dependencies {
   testImplementation "org.checkerframework:framework-test:${versions.checkerFramework}"
 
   errorproneJavac "com.google.errorprone:javac:${versions.errorproneJavacVersion}"
+
+  // https://mvnrepository.com/artifact/org.key-project/key.ui
+  implementation("org.key-project:key.ui:2.12.3")
+  // https://mvnrepository.com/artifact/org.key-project/key.core
+  implementation("org.key-project:key.core:2.12.3")
 }
 
 jar {
