--- a/build.gradle
+++ b/build.gradle
@@ -99,6 +99,8 @@ dependencies {
   implementation("org.key-project:key.ui:2.12.3")
   // https://mvnrepository.com/artifact/org.key-project/key.core
   implementation("org.key-project:key.core:2.12.3")
+
+  implementation 'ch.qos.logback:logback-classic:1.5.18'
 }
 
 jar {
